# Web_HW_13

./: .gitignore  Docker.ini  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyproject1.toml
Django/hw_project/: settings.py
Django/quotes/: views.py
Django/utils/Load_mongoDB/: connect_db.py  load_json.py
Django/utils/Load_mongoDB/Json/: authors.json
Django_lesson/hw_project/: settings.py
Django_lesson/quotes/: admin.py  forms.py  models.py  urls.py
Django_lesson/quotes/migrations/: 0001_initial.py  0004_alter_quote_author.py
Django_lesson/quotes/templatetags/: extract.py
Django_lesson/users/: views.py
Django_lesson/utils/Load_mongoDB/: main.py  models.py  parser_BS4.py
Django_lesson/utils/Load_mongoDB/Json/: quotes.json
Django_lesson/utils/Migration/: migration.py
Fast_API/: main.py
Fast_API/src/database/: models.py
Fast_API/src/repository/: contact.py  users.py
Fast_API/src/routes/: auth.py  contact.py  users.py
Fast_API/src/schemas/: contact.py  user.py
Fast_API/src/services/: auth.py  email.py
Fast_api_lesson/task_1/: main.py
Fast_api_lesson/task_1/templates/: example_email.html
Fast_api_lesson/task_3/: main.py
Fast_api_lesson/task_5/: main.py
Fast_api_lesson/task_6/: main.py
alembic/: env.py
alembic/versions/: fa8f2a3e1656_init.py
dsa/src/: shemas.py
dsa/src/database/: db.py
dsa/src/routes/: auth.py  tags.py
dsa/src/services/: limiter.py
part_1/Django_lesson/hw_project/: settings.py
part_1/Django_lesson/quotes/: utils.py
part_1/Django_lesson/users/: forms.py  views.py
part_1/Fast_api_lesson/task_1/: main.py
part_1/Fast_api_lesson/task_2/: main.py
(+20 files in other folders)
