[tool.poetry]
name = "web-hw-13-lesson"
version = "0.1.0"
description = ""
authors = ["Max <maxkryvytskyiwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
fastapi = "^0.110.1"
fastapi-mail = "^1.4.1"
sqlalchemy = "^2.0.29"
libgravatar = "^1.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
jose = "^1.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
